# ai-enhanced-oss4climate

./: .gitignore  README.md  makefile  pyproject.toml  script_enhance_repository_data.py  script_evaluate_data.py
.devcontainer/: devcontainer.json
data/: topic_and_use_cases.json
src/oss4climate_ai_enhanced/: data.py
src/oss4climate_ai_enhanced/src/llm_adapters/: __init__.py  anthropic.py
