[project]
name = "oss4climate_ai_enhanced"
version = "0.1.0"
readme = "README.md"
description = "Package to create AI-enhancement of listings of Open Source for Energy"
authors = [
    { name = "Pierre V-F", email = "hello@pierrevf.consulting"}    
]

requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.43.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tomlkit>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
